Improve the structure

--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -34,4 +34,4 @@ key,en,zh
 {map_30106},Artisanship Commission,工造司
 {map_30107},Alchemy Commission,丹鼎司
 {map_30108},Scalegorge Waterscape,鳞渊境
-{map_30109},,金人街
+{map_30109},Aurum Alley,金人街
