--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -1,6 +1,7 @@
 key,en,zh
 {resolution},Resolution,分辨率
 {apply},Apply,应用
+{btn_setting},Setting,设置
 {btn_world_select},Select world,选择世界
 {btn_map_select},Select map,选择地图
 {btn_holo},Holographic Overview,全息总览
