--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -27,6 +27,8 @@ key,en,zh
 {map_20108},Great Mine,大矿区
 {map_20109},Rivet Town,铆钉镇
 {map_20110},Robot Settlement,机械聚落
+{map_20111},Pillars of Creation,造物之柱
+{map_20112},Old Weapon Testing Ground,旧武器试验场
 {map_30101},Central Starskiff Haven,星槎海中枢
 {map_30102},Cloudford,流云渡
 {map_30103},Stargazer Navalia,迴星港
