--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -35,3 +35,4 @@ key,en,zh
 {map_30107},Alchemy Commission,丹鼎司
 {map_30108},Scalegorge Waterscape,鳞渊境
 {map_30109},Aurum Alley,金人街
+{map_30110},Fyxestroll Garden,绥园
