--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -17,6 +17,7 @@ key,en,zh
 {map_10102},Base Zone,基座舱段
 {map_10103},Storage Zone,收容舱段
 {map_10104},Supply Zone,支援舱段
+{map_10105},Seclusion Zone,禁闭舱段
 {map_20101},Administrative District,行政区
 {map_20102},Outlying Snow Plains,城郊雪原
 {map_20103},Backwater Pass,边缘通路
