--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -1,14 +1,25 @@
 key,en,zh
 {resolution},Resolution,分辨率
 {apply},Apply,应用
+{window_setting},Settings,设置
 {set_general},General,通用
 {set_view},View,视频
+{lang_chs},Chinese,简体中文
+{lang_cht},Chinese Traditional,繁体中文
+{lang_en},English,英文
+{btn_exit},Exit,退出
 {btn_setting},Setting,设置
+{btn_cheack_update},Check update,检查更新
 {btn_world_select},Select world,选择世界
 {btn_map_select},Select map,选择地图
 {btn_holo},Holographic Overview,全息总览
 {lbl_select_map},Select map,选择地图
 {lbl_select_world},Select world,选择世界
+{lbl_setting_language},Language,语言
+{lbl_setting_sound},Sound,声音
+{lbl_setting_fullscreen},Fullscreen,全屏
+{lbl_setting_resolution},Resolution,分辨率
+{lbl_cheack_update},Check for update,检查更新
 {world_100},Astral Express,星穹列车
 {world_101},Herta Space Station,空间站「黑塔」
 {world_201},Jarilo-VI,雅利洛-Ⅵ
