--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -10,10 +10,13 @@ key,en,zh
 {btn_world_select},Select world,选择世界
 {btn_map_select},Select map,选择地图
 {btn_holo},Holographic Overview,全息总览
+{btn_back_to_map},Back to Map,返回地图
 {floor_0},B1,-1层
 {floor_1},F1,1层
 {floor_2},F2,2层
 {floor_3},F3,3层
+{lbl_map},Map,地图
+{lbl_world},World,世界
 {lbl_select_map},Select map,选择地图
 {lbl_select_world},Select world,选择世界
 {lbl_setting_language},Language,语言
