🌈 style(Settings): Change Resolution text

--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -1,5 +1,6 @@
 key,en,zh
 {resolution},Resolution,分辨率
+{customize},Customize,自定义
 {apply},Apply,应用
 {window_setting},Settings,设置
 {set_general},General,通用
