✨ feat: Updata 2.1.0 - fix 40105 default floor

--- a/Resource/data/language/i18n.csv
+++ b/Resource/data/language/i18n.csv
@@ -71,3 +71,5 @@ key,en,zh
 {map_40103},Dram's Edge,筑梦边境
 {map_40104},A Child's Dream,稚子的梦
 {map_40105},The Reverie,「白日梦」酒店
+{map_40106},Dewlight Pavilion,朝露公馆
+{map_40107},Clock Studios Theme Park,克劳克影视乐园
