--- a/resource/data/language/i18n.csv
+++ b/resource/data/language/i18n.csv
@@ -15,6 +15,9 @@ key,en,zh
 {btn_holo},Holographic Overview,全息总览
 {btn_back_to_map},Back to Map,返回地图
 {btn_reset_cam},Reset Camera,重置相机
+{maker_type},Type:,类型:
+{maker_category},Category:,类别:
+{maker_id},ID:,ID:
 {floor_0},B1,-1层
 {floor_1},F1,1层
 {floor_2},F2,2层
