--- a/resource/data/language/i18n.csv
+++ b/resource/data/language/i18n.csv
@@ -78,3 +78,6 @@ key,en,zh
 {map_40105},The Reverie,「白日梦」酒店
 {map_40106},Dewlight Pavilion,朝露公馆
 {map_40107},Clock Studios Theme Park,克劳克影视乐园
+{map_40108},Dreamflux Reef,流梦礁
+{map_40109},SoulGlad™ Scorchsand Audition Venue,苏乐达™热砂海选会场
+{map_40110},Penacony Grand Theater,匹诺康尼大剧院
