--- a/resource/data/language/i18n.csv
+++ b/resource/data/language/i18n.csv
@@ -81,3 +81,4 @@ key,en,zh
 {map_40108},Dreamflux Reef,流梦礁
 {map_40109},SoulGlad™ Scorchsand Audition Venue,苏乐达™热砂海选会场
 {map_40110},Penacony Grand Theater,匹诺康尼大剧院
+{map_40111},The Radiant Feldspar,晖长石号
