--- a/resource/data/language/i18n.csv
+++ b/resource/data/language/i18n.csv
@@ -18,6 +18,9 @@ key,en,zh
 {maker_type},Type:,类型:
 {maker_category},Category:,类别:
 {maker_id},ID:,ID:
+{floor_-3},B4,-4层
+{floor_-2},B3,-3层
+{floor_-1},B2,-2层
 {floor_0},B1,-1层
 {floor_1},F1,1层
 {floor_2},F2,2层
@@ -71,6 +74,7 @@ key,en,zh
 {map_30108},Scalegorge Waterscape,鳞渊境
 {map_30109},Aurum Alley,金人街
 {map_30110},Fyxestroll Garden,绥园
+{map_30111},The Shackling Prison,幽囚狱
 {map_40101},The Reverie,「白日梦」酒店
 {map_40102},Golen Hour,黄金的时刻
 {map_40103},Dram's Edge,筑梦边境
